# python-ai

./: .gitignore  LICENSE  README.md  ai  md-gpt.md  pyproject.toml  st
docs/: prompt-engineering.md
docs/help/ai/: epilog.txt
lib/: cache.py  config.py  definitions.py  utils.py
lib/ai/: arguments.py  command_handler.py  commands.py  help_description.txt  io.py  messages.py  pdf.py  print.py  session.py  terminal.py  user_input.py
lib/args/: ai_arguments.py
lib/args/ai/: description.txt
lib/args/ai_help/: description.txt  epilog.txt
lib/desktop/: apps.py  clipboard.py
lib/openai/: audio.py  models.py  prompts.py  text.py
prompts/: amazon-web-services.md  aws-cli.md  aws.md  bash.md  cpp.md  define.md  docker.md  footer.md  github-actions-readme.md  github-actions.md  linux.md  nodejs.md  perspectives.md  python.md  qt.md  question.md  software.md  terraform.md
prompts/bash/: questions.md
prompts/debate/: auto.md  expert-search.md  perspectives.md
prompts/doc/: review.md
prompts/doc/resume/review/: security-architect.md  summary.md
prompts/file/: name.md  quesitons.md  review.md
prompts/github/: actions-readme.md  cli.md  graphql.md  questions.md  workflows.md
prompts/k8s/: kubectl.md  questions.md
prompts/tf/: questions.md
